; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_path-util.c_path_strv_resolve_uniq.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_path-util.c_path_strv_resolve_uniq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8** @path_strv_resolve_uniq(i8** %0, i8* %1) #0 {
  %3 = alloca i8**, align 8
  %4 = alloca i8**, align 8
  %5 = alloca i8*, align 8
  store i8** %0, i8*** %4, align 8
  store i8* %1, i8** %5, align 8
  %6 = load i8**, i8*** %4, align 8
  %7 = call i64 @strv_isempty(i8** %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %2
  %10 = load i8**, i8*** %4, align 8
  store i8** %10, i8*** %3, align 8
  br label %20

11:                                               ; preds = %2
  %12 = load i8**, i8*** %4, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = call i32 @path_strv_resolve(i8** %12, i8* %13)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %11
  store i8** null, i8*** %3, align 8
  br label %20

17:                                               ; preds = %11
  %18 = load i8**, i8*** %4, align 8
  %19 = call i8** @strv_uniq(i8** %18)
  store i8** %19, i8*** %3, align 8
  br label %20

20:                                               ; preds = %17, %16, %9
  %21 = load i8**, i8*** %3, align 8
  ret i8** %21
}

declare dso_local i64 @strv_isempty(i8**) #1

declare dso_local i32 @path_strv_resolve(i8**, i8*) #1

declare dso_local i8** @strv_uniq(i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
